hphp/test/quick/method_param_promotion_error.php.expectf
HipHop Fatal error: Parameters modifiers not allowed on methods in %s on line 7
